@@ -11,6 +11,7 @@
   not universally compatible. Closes bug #293
   (t/175_open_session2.t fails on i686: Long integer size is not compatible)
 * Convert all scans to PNG to allow tesseract to extract resolution
+* Ignore invalid options in profile
 * Update to Hungarian translation (thanks to csola)
 
 
